--- a/css/css/estyle.css
+++ b/css/css/estyle.css
@@ -1,27 +1,20 @@
-
-*{
-    font-style: italic;
-}
 body{
     background-color: antiquewhite;
+
 }
 
-.center{
-    text-align: center;
+h1{
+    color: #4287f5;
+}
+p{
+    color: #f542d7
 }
 
-.fonte-30{
-    font-size: 30px;
-}
-
-
-h2, p{
-    color: blueviolet;
-    font-size: 15px;
-    text-align: center;
-}
-
-#primeiro{
-    color: black;
-    padding: 10px;
+.backgorundTeste{
+    min-height: 60vh;
+    background-color: black;
+    background-image: url(../img/cidade.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
