--- a/css/css/estyle.css
+++ b/css/css/estyle.css
@@ -4,6 +4,19 @@ body{
 }
 
 h1{
+    border: solid black;
+    border-radius: 10px;
+    color: #4287f5;
+    text-align: center;
+    background-color: #f542d7;
+}
+
+h2{
+    border-left: solid 5px red;
+    border-right: 5px brown;
+    border-top: solid 5px yellow;
+    border-bottom: solid 5px green;
+
     color: #4287f5;
 }
 p{
