--- a/css/css/estyle.css
+++ b/css/css/estyle.css
@@ -3,7 +3,7 @@ body{
 
 }
 
-h1{
+/* h1{
     border: solid black;
     border-radius: 10px;
     color: #4287f5;
@@ -13,7 +13,7 @@ h1{
     margin-left: 150px;
     margin-right: 150px;
     margin-bottom: 30px;
-}
+} */
 
 h2{
     border-left: solid 5px red;
