--- a/css/css/pagina.css
+++ b/css/css/pagina.css
@@ -1,6 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
+h1{
+    text-shadow: 2px 2px 4px blue;
+}
+
+.multipla{
+    color: black;
+    text-shadow: 0 0 3px #FF0000, 2px 2px 5px yellow;
+}
+
+.branco{
+    color: white;
+    text-shadow: 2px 2px 4px black
+}
+
+.caixa{
+    margin-top: 40px;
+    background: white;
+    width: 40%;
+    height: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+.reduzido{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+}
+
+.caixa:hover .reduzido{
+    white-space: normal;
+}
+
+/* body{
+     min-height: 100vh;
+    background-image: linear-gradient(#6a11cb, #2575fc);
+} */
+
 .titulo{
     color: white;
     text-align: center;
@@ -119,4 +157,39 @@ a.botao{
 
 a.botao:hover{
     opacity: 0.5;
+}
+
+
+/* Smartphones (600px para baixo) */
+@media only screen and (max-width: 600px) {
+    body{
+        background: blue;
+    }
+}
+
+/* Dispositivos um pouco maiores, mas ainda pequenos (Pequenos Tablets e Smartphones + largos, 600px para cima) */
+@media only screen and (min-width: 600px) {
+    body{
+        background: red;
+    }}
+
+/*Dispostivos Médios (Tablets deitados, 768px para cima) */
+@media only screen and (min-width: 768px) {
+    body{
+        background: yellow;
+    }
+}
+
+/* Dispostivos Largos (laptops/desktops, 992px para cima) */
+@media only screen and (min-width: 992px) {
+    body{
+        background: orange;
+    }
+}
+
+/* Super Largos (Telas maiores laptops, desktops e até TVs, 1200px para cima) */
+@media only screen and (min-width: 1200px) {
+    body{
+        background: pink;
+    }
 }
