--- a/js2/exercicio2/style.css
+++ b/js2/exercicio2/style.css
@@ -55,9 +55,35 @@ button {
     font-size: 1.1rem;
     border-radius: 5px;
     cursor: pointer;
-    transition: background 0.3s, transform 0.1s;
+    transition: background-color 0.3s, transform 0.1s;
     width: 100%;
     font-weight: bold;
+}
+
+button.removerBotao{
+    background-color: rgb(190, 26, 26);
+    width: 30%;
+    color: white;
+    padding: 5px 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.6em;
+    margin-left: 5px;
+    transition: background-color 0.3s ease;
+}
+
+button.editarBotao{
+    background-color: rgb(241, 241, 121);
+    width: 30%;
+    color: black;
+    padding: 5px 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.6em;
+    margin-left: 5px;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
@@ -83,6 +109,9 @@ button:active {
     margin-top: 10px;
     text-align: left;
 }
+
+
+
 
 #lista li {
     background-color: #fff;
